--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
 		"start": "wp-scripts start ./src/index.js ./src/view.js"
 	},
 	"devDependencies": {
+		"@ideal-postcodes/postcode-lookup": "^1.10.2",
 		"@wordpress/block-editor": "^9.2.0",
 		"@wordpress/blocks": "^11.9.0",
 		"@wordpress/i18n": "^4.10.0",
-		"@wordpress/scripts": "^23.2.0"
+		"@wordpress/scripts": "^23.2.0",
+		"ideal-postcodes": "^1.0.0",
+		"postcode": "^5.1.0"
 	}
 }
